--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <ul class="repos list-unstyled">
             <li><a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a wrapper for localStorage, sessionStorage and document.cookie that sets and gets true javascript vars, objects, etc.</a></li>
             <li><a target="_blank" href="https://github.com/jimmybyrum/crosshatch.js">Crosshatch.js</a> is a library to manage #! urls. Since creating this, I've switched to using Backbone which has this built in. That said, crosshatch is handy for very lightweight URL management.</a></li>
+            <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a></a></li>
         </ul>
 
     </div>
