--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <!-- <li><a class="nav-photos" href="#photos">Photos</a></li> -->
     <li class="underline"></li>
 </ul>
+<a id="voice-toggle" class="ha" href="#audio">Voice commands <span class="status">off</span></a>
+<div id="voice-intro" class="ha voice-hidden">
+    <h3>This website understands voice commands for navigation.</h3>
+    <p class="lead">Try saying "Go to Travel" or "Go to code".</p>
+</div>
 <div id="top" name="top" class="bg-intro ha match-parent vertical"></div>
 <div id="travel" name="travel" class="bg-travel ha match-parent vertical">
     <div id="map-canvas" class="match-parent vertical"></div>
@@ -105,6 +110,7 @@
 <script src="/js/vault.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/ace/1.1.01/min/ace.js" type="text/javascript"></script>
 <script src="/places.js" type="text/javascript"></script>
+<script src="/js/audio/speech.js" type="text/javascript"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAeV2FBqrEPvRSxvDEJzn5stgVU34GaN74&sensor=true" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
@@ -274,8 +280,23 @@ $(document).ready(function() {
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/javascript");
+
+    var $voice = $("#voice-toggle");
+    $voice.on('click', function(e) {
+        e.preventDefault();
+        $voice.toggleClass("voice-on");
+        if ($voice.hasClass("voice-on")) {
+            $voice.find(".status").text("on");
+            startButton();
+        } else {
+            $voice.find(".status").text("off");
+            stopButton();
+        }
+    });
 });
 </script>
+<span id="interim_span" class="hide"></span>
+<span id="final_span" class="hide"></span>
 <script src="/js/google-analytics.js" type="text/javascript"></script>
 </body>
 </html>
