--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <li class="underline"></li>
 </ul>
 <a id="voice-toggle" class="ha" href="#audio">Voice commands <span class="status">off</span></a>
-<div id="voice-intro" class="ha voice-hidden">
+<div id="voice-intro" class="ha">
     <h3>This website understands voice commands for navigation.</h3>
-    <p class="lead">Try saying "Go to Travel" or "Go to code".</p>
+    <p class="lead">Try saying "Go to Travel" or "Go to code" or "Close voice intro".</p>
 </div>
 <div id="top" name="top" class="bg-intro ha match-parent vertical"></div>
 <div id="travel" name="travel" class="bg-travel ha match-parent vertical">
