re-arranging a bit

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
           </div>
         </div>
 
-        <div id="photo-camino2" class="item match-parent vertical horizontal">
-          <div class="carousel-caption">
-            En camino
-          </div>
-        </div>
-
         <div id="photo-camino" class="item match-parent vertical horizontal">
           <div class="carousel-caption">
             Argentina
+          </div>
+        </div>
+
+        <div id="photo-camino2" class="item match-parent vertical horizontal">
+          <div class="carousel-caption">
+            En camino
           </div>
         </div>
 
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-        <div id="photo-rome" class="item match-parent vertical horizontal">
+        <!-- <div id="photo-rome" class="item match-parent vertical horizontal">
           <div class="carousel-caption">
             Rome
           </div>
@@ -117,11 +117,11 @@
           <div class="carousel-caption">
             Dubrovnik, Hrvatska
           </div>
-        </div>
+        </div> -->
 
         <div id="photo-lipie" class="item match-parent vertical horizontal">
           <div class="carousel-caption">
-            Липя / Lipie - My grandmother's village in Poland
+            Липя
           </div>
         </div>
 
