--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Jimmy Byrum</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no"> -->
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quicksand:100,200,300,400">
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link href='/css/styles.css' rel='stylesheet' type='text/css'>
