--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <li><a class="nav-code" href="#code">Code</a></li>
     <li class="underline"></li>
 </ul>
-<a id="voice-toggle" class="ha" href="#audio">Voice commands <span class="status">off</span></a>
-<div id="voice-intro" class="ha">
+<a id="voice-toggle" class="ha label label-primary" href="#audio">Voice commands <span class="status">off</span></a>
+<div id="voice-intro" class="ha black-dialog"><i class="glyphicon glyphicon-remove-sign"></i>
     <h3>This website understands voice commands for navigation.</h3>
-    <p class="lead">Try saying "Go to Travel" or "Go to code" or "Close voice intro".</p>
+    <p class="lead">Try saying "Travel" or "Code" or "Close voice intro".</p>
+    <p>For a complete list of commands, say "Show help" or type "?".</p>
 </div>
 <div id="top" name="top" class="bg-intro ha match-parent vertical horizontal">
     <div id="carousel-example-generic" class="carousel slide match-parent vertical horizontal" data-ride="carousel">
@@ -226,12 +227,39 @@
         <ul class="repos list-unstyled">
             <li><a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a wrapper for localStorage, sessionStorage and document.cookie that sets and gets true javascript vars, objects, etc.</a></li>
             <li><a target="_blank" href="https://github.com/jimmybyrum/crosshatch.js">Crosshatch.js</a> is a library to manage #! urls. Since creating this, I've switched to using Backbone which has this built in. That said, crosshatch is handy for very lightweight URL management.</a></li>
-            <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a></a></li>
+            <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a> on GitHub</li>
         </ul>
 
     </div>
 </div>
 <!-- <div id="photos" name="photos" class="ha match-parent vertical"></div> -->
+<div id="help" class="black-dialog ha container-fluid"><i class="glyphicon glyphicon-remove-sign"></i>
+    <h3>Voice commands</h3>
+    <div class="col-sm-6">
+        <p class="lead">"Go to..."</p>
+        <ul class="list-unstyled">
+            <li>"Top" or "Home" or "Photos"</li>
+            <li>"Travel"</li>
+            <li>"Code"</li>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <p class="lead">Photo navigation</p>
+        <ul class="list-unstyled">
+            <li>"Next"</li>
+            <li>"Previous"</li>
+            <li>"Open"</li>
+        </ul>
+    </div>
+    <div class="col-sm-12">
+        <p class="lead">Dialogs</p>
+        <ul class="list-unstyled">
+            <li>"Show voice commands"</li>
+            <li>"Show help"</li>
+            <li>"Close"</li>
+        </ul>
+    </div>
+</div>
 
 <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
@@ -323,6 +351,19 @@ $(document).ready(function() {
         _.delay(function() {
             $html.removeClass("goto-" + name.substring(1));
         }, 600);
+        $("#carousel-example-generic").carousel("pause");
+    });
+
+    $(document).on("click", ".glyphicon-remove-sign", function(e) {
+        $(e.target).parent().removeClass("showing");
+    });
+
+    $(document).on("keypress", function(e) {
+        if (e.keyCode === 63) {
+            $("#help").addClass("showing");
+        } else if (e.keyCode === 27) {
+            $(".black-dialog").removeClass("showing");
+        }
     });
 
     var map, locations = [], li = 0, pins_placed = false, infowindows = [];
