adding fav icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" class="no-js start">
 <head>
 <title>Jimmy Byrum</title>
+<link rel="icon" href="/images/icon-photo-round.png" type="image/png">
+<link rel="apple-touch-icon-precomposed" href="/images/icon-photo-rounded.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no"> -->
