--- a/index.html
+++ b/index.html
@@ -6,28 +6,33 @@
 <link rel="apple-touch-icon-precomposed" href="/images/icon-photo-rounded.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no"> -->
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quicksand:100,200,300,400">
 <link rel="stylesheet" href="/css/bootstrap.min.css">
-<link href='/css/styles.css' rel='stylesheet' type='text/css'>
+<link href='/css/global.css' rel='stylesheet' type='text/css'>
+<link href='/css/small.css' rel='stylesheet' type='text/css'>
+<link href='/css/large.css' rel='stylesheet' type='text/css'>
+<link href='/css/photos.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-<h1 class="site-title"><a href="#top">Jimmy Byrum</a></h1>
-<div class="ha nav-bg"></div>
-<ul class="navigation list-inline list-unstyled ha ha-">
-    <li><a class="nav-top" href="#top">Photos</a></li>
-    <li><a class="nav-travel" href="#travel">Travel</a></li>
-    <li><a class="nav-code" href="#code">Code</a></li>
-    <li class="underline"></li>
-</ul>
+<div class="header clearfix">
+    <h1 class="site-title"><a href="#top">Jimmy Byrum</a></h1>
+    <ul class="navigation list-inline list-unstyled ha">
+        <li><a class="nav-top ha" href="#top">Photos</a></li>
+        <li><a class="nav-travel ha" href="#travel">Travel</a></li>
+        <li><a class="nav-code ha" href="#code">Code</a></li>
+        <li class="underline ha"></li>
+    </ul>
+</div>
 <a id="voice-toggle" class="ha label label-primary" href="#audio">Voice commands <span class="status">off</span></a>
-<div id="voice-intro" class="ha black-dialog"><i class="glyphicon glyphicon-remove-sign"></i>
+<div class="ha nav-bg"></div>
+<div id="voice-intro" class="ha dialog"><i class="glyphicon glyphicon-remove-sign"></i>
     <h3>This website understands voice commands for navigation.</h3>
     <p class="lead">Try saying "Travel" or "Code" or "Close voice intro".</p>
     <p>For a complete list of commands, say "Show help" or type "?".</p>
 </div>
-<div id="top" name="top" class="bg-intro ha match-parent vertical horizontal">
+<div id="top" name="top" class="section bg-intro ha match-parent vertical horizontal">
     <div id="carousel-example-generic" class="carousel slide match-parent vertical horizontal" data-ride="carousel">
       <!-- Wrapper for slides -->
       <div class="carousel-inner match-parent vertical horizontal">
@@ -157,10 +162,10 @@
       </a>
     </div>
 </div>
-<div id="travel" name="travel" class="bg-travel ha match-parent vertical">
+<div id="travel" name="travel" class="section bg-travel ha match-parent vertical">
     <div id="map-canvas" class="match-parent vertical"></div>
 </div>
-<div id="code" name="code" class="match-parent vertical">
+<div id="code" name="code" class="section match-parent vertical clearfix">
     <div id="editor">var resume = {
     name: "James Byrum",
     experience: [
@@ -235,7 +240,7 @@
     </div>
 </div>
 <!-- <div id="photos" name="photos" class="ha match-parent vertical"></div> -->
-<div id="help" class="black-dialog ha container-fluid"><i class="glyphicon glyphicon-remove-sign"></i>
+<div id="help" class="dialog ha container-fluid"><i class="glyphicon glyphicon-remove-sign"></i>
     <h3>Voice commands</h3>
     <div class="col-sm-6">
         <p class="lead">"Go to..."</p>
@@ -263,6 +268,7 @@
     </div>
 </div>
 
+<script src="/js/modernizr.js"></script>
 <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="//cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
@@ -273,207 +279,7 @@
 <script src="/places.js" type="text/javascript"></script>
 <script src="/js/audio/speech.js" type="text/javascript"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAeV2FBqrEPvRSxvDEJzn5stgVU34GaN74&sensor=true" type="text/javascript"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-    var $window = $(window);
-    var window_height;
-
-    var $travel = $("#travel");
-    var travel_position = 0;
-    var $code = $("#code");
-    var code_position = 0;
-    // var $photos = $("#photos");
-    // var photos_position = 0;
-
-    var $html = $("html");
-
-    var $title = $(".site-title");
-    var title_top = $title.position().top;
-
-    var $navigation = $(".navigation");
-    // var $nav_bg = $(".nav-bg");
-
-    _.delay(function() {
-        $html.removeClass("start");
-    }, 1000);
-
-    var onScroll = function(e) {
-        var scroll_top = $window.scrollTop();
-
-        if (scroll_top >= title_top) {
-            if ( ! $title.hasClass("fixed")) {
-                $title.removeClass("transition");
-                $title.addClass("fixed");
-            }
-        } else if (scroll_top < 10) {
-            $title.addClass("transition");
-            $title.removeClass("fixed");
-        }
-
-        if (scroll_top >= code_position - 10) {
-            $html.removeClass("section-top section-travel");
-            $html.addClass("section-code");
-        } else if (scroll_top >= travel_position - 10) {
-            $html.removeClass("section-top section-code");
-            $html.addClass("section-travel");
-            placePins();
-        } else if (scroll_top < window_height) {
-            $html.removeClass("section-travel section-code");
-            $html.addClass("section-top");
-        }
-    };
-    onScroll = _.throttle(onScroll, 50);
-    $window.on("scroll", onScroll);
-
-    var onResize = function() {
-        $html.addClass("disable-scrolling");
-        window_height = $window.height();
-        $(".match-parent.vertical").css("min-height", window_height + "px");
-        _.delay(function() {
-            travel_position = Math.round($travel.offset().top);
-            code_position = Math.round($code.offset().top);
-            // photos_position = Math.round($photos.offset().top);
-            $html.removeClass("disable-scrolling");
-            onScroll();
-            $('.carousel').carousel();
-        }, 300);
-    };
-    onResize = _.throttle(onResize, 50);
-    $window.on("resize", onResize);
-
-    onResize();
-
-    $(document).on("click", ".navigation a, .site-title a", function(e) {
-        e.preventDefault();
-        var $item = $(e.target);
-        var name = $item.attr("href");
-        var $target = $(name);
-        $.scrollTo($target, 300, {easing: "swing"});
-        $html.addClass("goto-" + name.substring(1));
-        _.delay(function() {
-            $html.removeClass("goto-" + name.substring(1));
-        }, 600);
-        $("#carousel-example-generic").carousel("pause");
-    });
-
-    $(document).on("click", ".glyphicon-remove-sign", function(e) {
-        $(e.target).parent().removeClass("showing");
-    });
-
-    $(document).on("keypress", function(e) {
-        if (e.keyCode === 63) {
-            $("#help").addClass("showing");
-        } else if (e.keyCode === 27) {
-            $(".black-dialog").removeClass("showing");
-        }
-    });
-
-    var map, locations = [], li = 0, pins_placed = false, infowindows = [];
-    var placePin = function(location) {
-        var lat = location.coords[0];
-        var lon = location.coords[1];
-        var iw_content = location.name;
-        if (location.photos) {
-            var flickr = location.photos.split(",");
-            var f, fl = flickr.length;
-            for (f = 0; f < fl; f++) {
-                iw_content += '<br><a target="_blank" href="'+flickr[f]+'">Photos</a>';
-            }
-        }
-        if (location.date) {
-            iw_content += "<br>"+location.date;
-        }
-        var infowindow = new google.maps.InfoWindow({
-            content: iw_content
-        });
-        var marker = new google.maps.Marker({
-            position: new google.maps.LatLng(lat, lon),
-            map: map,
-            icon: "/images/pin.png",
-            title: location.name
-            // animation: google.maps.Animation.DROP
-        });
-        google.maps.event.addListener(marker, 'click', function() {
-            infowindow.open(map, marker);
-            infowindows.push(infowindow);
-        });
-        _.delay(placeNextPin, 10);
-    };
-    var placeNextPin = function() {
-        var location = locations[li];
-        if (location) {
-            placePin(location);
-            li++;
-        }
-    };
-    var placePins = function() {
-        if ( ! pins_placed) {
-            pins_placed = true;
-            var continent, country;
-            for (continent in places_data) {
-                for (country in places_data[continent]) {
-                    var locs = places_data[continent][country];
-                    var c, cl = locs.length;
-                    for (c = 0; c < cl; c++) {
-                        locs[c].epoch = new Date(locs[c].date);
-                        locations.push(locs[c]);
-                    }
-                }
-            }
-            locations.sort(function(a, b) {
-                return a.epoch - b.epoch;
-            });
-            placeNextPin();
-        }
-    };
-    function initialize() {
-        var mapOptions = {
-            center: new google.maps.LatLng(18, 0),
-            zoom: 2,
-            mapTypeId: google.maps.MapTypeId.SATELLITE,
-            streetViewControl: false,
-            panControl: false,
-            mapTypeControlOptions: {
-                position: google.maps.ControlPosition.BOTTOM_CENTER,
-                style: google.maps.MapTypeControlStyle.DROPDOWN_MENU
-            },
-            zoomControl: true,
-            zoomControlOptions: {
-                position: google.maps.ControlPosition.LEFT_CENTER
-            },
-            scaleControl: true,
-            scrollwheel: false
-        };
-        map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-        google.maps.event.addListener(map, 'click', function() {
-            console.warn(123);
-            var i, il = infowindows.length;
-            for (i = 0; i < il; i++) {
-                var infowindow = infowindows.pop();
-                infowindow.close();
-            }
-        });
-    }
-    google.maps.event.addDomListener(window, 'load', initialize);
-
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.getSession().setMode("ace/mode/javascript");
-
-    var $voice = $("#voice-toggle");
-    $voice.on('click', function(e) {
-        e.preventDefault();
-        $voice.toggleClass("voice-on");
-        if ($voice.hasClass("voice-on")) {
-            $voice.find(".status").text("on");
-            startButton();
-        } else {
-            $voice.find(".status").text("off");
-            stopButton();
-        }
-    });
-});
-</script>
+<script src="/js/homepage.js" type="text/javascript"></script>
 <span id="interim_span" class="hide"></span>
 <span id="final_span" class="hide"></span>
 <script src="/js/google-analytics.js" type="text/javascript"></script>
