--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="http://talkto.com"><img src="//talkto.com/media/images/logo/logo-flat1.png" width="152" height="33" alt="TalkTo"></a></h4>
-                <p class="lead">For this last few years, I've been working with a startup based in Cambridge, MA. We make an app (<a target="_blank" href="http://talkto.com/app/apple">Apple</a>/<a target="_blank" href="http://talkto.com/app/android">Android</a>) that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing. Startups are awesome.</p>
+                <p class="lead">For this last few years, I've been working with a startup based in Cambridge, MA. We make an app (<a target="_blank" href="http://talkto.com/app/apple">Apple</a>/<a target="_blank" href="http://talkto.com/app/android">Android</a>) that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://www.ingles.mineduc.cl/"><img src="/images/minudec.png" width="200" height="71" alt="Chilean Ministry of Education"></a></h4>
