--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 <script src="//cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
 <script src="/js/underscore.min.js" type="text/javascript"></script>
 <script src="/js/jquery.scrollto.min.js" type="text/javascript"></script>
+<script src="/js/jquery.touchswipe.js" type="text/javascript"></script>
 <script src="/js/vault.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/ace/1.1.01/min/ace.js" type="text/javascript"></script>
 <script src="/places.js" type="text/javascript"></script>
