--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="no-js start">
+<html lang="en" class="no-js start ha-on">
 <head>
 <title>Jimmy Byrum</title>
 <link rel="icon" href="/images/icon-photo-round.png" type="image/png">
@@ -17,7 +17,7 @@
 <body>
 
 <div class="header clearfix">
-    <h1 class="site-title"><a href="#top">Jimmy Byrum</a></h1>
+    <h1 class="site-title ha"><a href="#top">Jimmy Byrum</a></h1>
     <ul class="navigation list-inline list-unstyled ha">
         <li><a class="nav-top ha" href="#top">Photos</a></li>
         <li><a class="nav-travel ha" href="#travel">Travel</a></li>
