adding voice off command

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="voice-intro" class="ha dialog"><i class="glyphicon glyphicon-remove-sign"></i>
     <h3>This website understands voice commands for navigation.</h3>
     <p class="lead">Try saying "Travel" or "Code" or "Close voice intro".</p>
-    <p>For a complete list of commands, say "Show help" or type "?".</p>
+    <p>For a complete list of commands, say "Help" or type "?".</p>
 </div>
 <div id="top" name="top" class="section bg-intro ha match-parent vertical horizontal">
     <div id="carousel-example-generic" class="carousel slide match-parent vertical horizontal" data-ride="carousel">
@@ -264,6 +264,12 @@
             <li>"Show voice commands"</li>
             <li>"Show help"</li>
             <li>"Close"</li>
+        </ul>
+    </div>
+    <div class="col-sm-12">
+        <p class="lead">Voice</p>
+        <ul class="list-unstyled">
+            <li>When using voice, say "Voice off" to turn off voice commands.</li>
         </ul>
     </div>
 </div>
