removing unused files

--- a/index.html
+++ b/index.html
@@ -277,14 +277,13 @@
 <script src="/js/modernizr.js"></script>
 <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script src="//cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
 <script src="/js/underscore.min.js" type="text/javascript"></script>
 <script src="/js/jquery.scrollto.min.js" type="text/javascript"></script>
 <script src="/js/jquery.touchswipe.js" type="text/javascript"></script>
 <script src="/js/vault.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/ace/1.1.01/min/ace.js" type="text/javascript"></script>
 <script src="/places.js" type="text/javascript"></script>
-<script src="/js/audio/speech.js" type="text/javascript"></script>
+<script src="/js/speech.js" type="text/javascript"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAeV2FBqrEPvRSxvDEJzn5stgVU34GaN74&sensor=true" type="text/javascript"></script>
 <script src="/js/homepage.js" type="text/javascript"></script>
 <span id="interim_span" class="hide"></span>
