--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         "WebRTC", "SIP",
         "Python", "Django", "Nginx", "Apache",
         "MySQL", "Redis",
-        "Java"
+        "Java", "Arduino"
     ],
     libraries: [
         "Modernizr", "Backbone", "Underscore", "jQuery",
