--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             location:   "San Francisco, CA",
             start_date: "2009-10-01",
             end_date:   "2010-11-15",
-            job_title:  "Web Developer",
+            job_title:  "Lead Web Developer",
             summary:    "As a WebMocha consultant, I worked with many\
                         companies including Yahoo, ZENxd,\
                         and Jump Associates"
@@ -205,7 +205,7 @@
             locations:  [ "Sunnvyvale, CA", "London, UK" ],
             start_date: "2004-05-01",
             end_date:   "2008-06-30",
-            job_title:  "Web Developer",
+            job_title:  "Frontend Engineer",
             summary:    "I was the lead frontend engineer for the\
                         homepage while working in Sunnyvale for two\
                         years. I then transferred to the London office\
