--- a/index.html
+++ b/index.html
@@ -154,7 +154,33 @@
     <div id="map-canvas" class="match-parent vertical"></div>
 </div>
 <div id="code" name="code" class="section resume match-parent vertical clearfix">
-    <div class="col-sm-6 editor-cx">
+    <div id="projects" class="col-lg-6 col-lg-push-6">
+
+        <ul class="highlights list-unstyled">
+            <li>
+                <h4><a target="_blank" href="http://talkto.com"><img src="//talkto.com/media/images/logo/logo-flat1.png" width="152" height="33" alt="TalkTo"></a></h4>
+                <p class="lead">For this last few years, I've been working with a startup based in Cambridge, MA. We make an app (<a target="_blank" href="http://talkto.com/app/apple">Apple</a>/<a target="_blank" href="http://talkto.com/app/android">Android</a>) that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
+            </li>
+            <li>
+                <h4><a target="_blank" href="http://www.ingles.mineduc.cl/"><img src="/images/minudec.png" width="200" height="71" alt="Chilean Ministry of Education"></a></h4>
+                <p class="lead">I took some time off in 2008 to be a volunteer English teacher in Chile. For six months, I taught at Liceo Polivalente Hernando de Magallanes in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157606769792487/">Porvenir</a>, which is a small town on the Tierra del Fuego. After that, I traveled for six months, starting in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157611541153932/">Antarctica</a> and then making my way north along the Andes.</p>
+            </li>
+            <li>
+                <h4><a target="_blank" href="http://yahoo.com"><img src="http://l.yimg.com/rz/l/yahoo_en-US_f_p_142x37.png" width="142" height="37" alt="Yahoo!"></a></h4>
+                <p class="lead">I made two versions of the Yahoo! home page back in the day (2004) while working in Sunnyvale, CA. In 2006, I transferred to the London, UK office and worked on the European sites. I also worked on the Starbucks Digital Network project in late 2010 doing mostly mobile web development.</p>
+            </li>
+        </ul>
+
+        <h2>GitHub / <a target="_blank" href="https://github.com/jimmybyrum">jimmybyrum</a></h2>
+        <p class="lead">I have a couple small Javascript repos that are public and potentially useful.</p>
+        <ul class="repos list-unstyled">
+            <li><a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a wrapper for localStorage, sessionStorage and document.cookie that sets and gets true javascript vars, objects, etc.</a></li>
+            <li><a target="_blank" href="https://github.com/jimmybyrum/crosshatch.js">Crosshatch.js</a> is a library to manage #! urls. Since creating this, I've switched to using Backbone which has this built in. That said, crosshatch is handy for very lightweight URL management.</a></li>
+            <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a> on GitHub</li>
+        </ul>
+
+    </div>
+    <div class="col-lg-6 col-lg-pull-6 editor-cx">
         <div id="editor">var resume = {
     name: "James Byrum",
     experience: [
@@ -224,32 +250,6 @@
         "Photoshop", "Illustrator", "Fireworks"
     ]
 };</div>
-    </div>
-    <div id="projects" class="col-sm-6">
-
-        <ul class="highlights list-unstyled">
-            <li>
-                <h4><a target="_blank" href="http://talkto.com"><img src="//talkto.com/media/images/logo/logo-flat1.png" width="152" height="33" alt="TalkTo"></a></h4>
-                <p class="lead">For this last few years, I've been working with a startup based in Cambridge, MA. We make an app (<a target="_blank" href="http://talkto.com/app/apple">Apple</a>/<a target="_blank" href="http://talkto.com/app/android">Android</a>) that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
-            </li>
-            <li>
-                <h4><a target="_blank" href="http://www.ingles.mineduc.cl/"><img src="/images/minudec.png" width="200" height="71" alt="Chilean Ministry of Education"></a></h4>
-                <p class="lead">I took some time off in 2008 to be a volunteer English teacher in Chile. For six months, I taught at Liceo Polivalente Hernando de Magallanes in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157606769792487/">Porvenir</a>, which is a small town on the Tierra del Fuego. After that, I traveled for six months, starting in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157611541153932/">Antarctica</a> and then making my way north along the Andes.</p>
-            </li>
-            <li>
-                <h4><a target="_blank" href="http://yahoo.com"><img src="http://l.yimg.com/rz/l/yahoo_en-US_f_p_142x37.png" width="142" height="37" alt="Yahoo!"></a></h4>
-                <p class="lead">I made two versions of the Yahoo! home page back in the day (2004) while working in Sunnyvale, CA. In 2006, I transferred to the London, UK office and worked on the European sites. I also worked on the Starbucks Digital Network project in late 2010 doing mostly mobile web development.</p>
-            </li>
-        </ul>
-
-        <h2>GitHub / <a target="_blank" href="https://github.com/jimmybyrum">jimmybyrum</a></h2>
-        <p class="lead">I have a couple small Javascript repos that are public and potentially useful.</p>
-        <ul class="repos list-unstyled">
-            <li><a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a wrapper for localStorage, sessionStorage and document.cookie that sets and gets true javascript vars, objects, etc.</a></li>
-            <li><a target="_blank" href="https://github.com/jimmybyrum/crosshatch.js">Crosshatch.js</a> is a library to manage #! urls. Since creating this, I've switched to using Backbone which has this built in. That said, crosshatch is handy for very lightweight URL management.</a></li>
-            <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a> on GitHub</li>
-        </ul>
-
     </div>
 </div>
 <footer class="footer text-center">
