--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
 </head>
 <body>
 
+<h1 class="site-title ha"><a href="#top">Jimmy Byrum</a></h1>
 <header class="header clearfix">
-    <h1 class="site-title ha"><a href="#top">Jimmy Byrum</a></h1>
-    <ul class="navigation list-inline list-unstyled ha">
-        <li><a class="nav-top ha" href="#top">Photos</a></li>
-        <li><a class="nav-travel ha" href="#travel">Travel</a></li>
-        <li><a class="nav-code ha" href="#code">Code</a></li>
-        <li class="underline ha"></li>
-    </ul>
+    <nav class="navigation list-inline list-unstyled ha">
+        <a class="nav-top ha" href="#top">Photos</a>
+        <a class="nav-travel ha" href="#travel">Travel</a>
+        <a class="nav-code ha" href="#code">Code</a>
+        <span class="underline wrap-content ha"></span>
+    </nav>
 </header>
 <a id="voice-toggle" class="ha label label-primary" href="#audio">Voice commands <span class="status">off</span></a>
-<div class="ha nav-bg"></div>
 <div id="voice-intro" class="ha dialog"><i class="glyphicon glyphicon-remove-sign"></i>
     <h3>This website understands voice commands for navigation.</h3>
     <p class="lead">Try saying "Travel" or "Code" or "Close voice intro".</p>
