moving speech to submodule

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 <script src="/js/vault.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/ace/1.1.01/min/ace.js" type="text/javascript"></script>
 <script src="/places.js" type="text/javascript"></script>
-<script src="/js/speech.js" type="text/javascript"></script>
+<script src="/lib/voice/voice-commands.min.js" type="text/javascript"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAeV2FBqrEPvRSxvDEJzn5stgVU34GaN74&sensor=true" type="text/javascript"></script>
 <script src="/js/homepage.js" type="text/javascript"></script>
 <script src="/js/google-analytics.js" type="text/javascript"></script>
