--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 <script src="/js/underscore.min.js" type="text/javascript"></script>
 <script src="/js/jquery.scrollto.min.js" type="text/javascript"></script>
 <script src="/js/jquery.touchswipe.js" type="text/javascript"></script>
-<script src="/js/vault.min.js" type="text/javascript"></script>
+<script src="/lib/vault/vault.min.js" type="text/javascript"></script>
+<script src="/lib/voice/voice-commands.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/ace/1.1.01/min/ace.js" type="text/javascript"></script>
 <script src="/places.js" type="text/javascript"></script>
-<script src="/lib/voice/voice-commands.min.js" type="text/javascript"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAeV2FBqrEPvRSxvDEJzn5stgVU34GaN74&sensor=true" type="text/javascript"></script>
 <script src="/js/homepage.js" type="text/javascript"></script>
 <script src="/js/google-analytics.js" type="text/javascript"></script>
