--- a/index.html
+++ b/index.html
@@ -25,13 +25,8 @@
         <a class="nav-code ha" href="#code">Code</a>
         <span class="underline wrap-content ha"></span>
     </nav>
+    <a id="voice-toggle" class="ha label label-primary" href="#audio">Voice commands <span class="status">off</span></a>
 </header>
-<a id="voice-toggle" class="ha label label-primary" href="#audio">Voice commands <span class="status">off</span></a>
-<div id="voice-intro" class="ha dialog"><i class="glyphicon glyphicon-remove-sign"></i>
-    <h3>This website understands voice commands for navigation.</h3>
-    <p class="lead">Try saying "Travel" or "Code" or "Close voice intro".</p>
-    <p>For a complete list of commands, say "Help" or type "?".</p>
-</div>
 <div id="top" name="top" class="section bg-intro ha match-parent vertical horizontal">
     <div id="carousel-example-generic" class="carousel slide match-parent vertical horizontal" data-ride="carousel">
       <!-- Wrapper for slides -->
@@ -151,6 +146,8 @@
 </div>
 <div id="travel" name="travel" class="section bg-travel ha match-parent vertical">
     <div id="map-canvas" class="match-parent vertical"></div>
+    <div id="map-year" class="toast"><span class="content">1978</span></div>
+    <ul id="map-years" class="list-unstyled list-inline"></ul>
 </div>
 <div id="code" name="code" class="section resume match-parent vertical clearfix">
     <div id="projects" class="col-lg-6 col-lg-push-6">
@@ -291,6 +288,11 @@
             <li>"Voice off" to turn off voice commands.</li>
         </ul>
     </div>
+</div>
+<div id="voice-intro" class="ha dialog"><i class="glyphicon glyphicon-remove-sign"></i>
+    <h3>This website understands voice commands for navigation.</h3>
+    <p class="lead">Try saying "Travel" or "Code" or "Close voice intro".</p>
+    <p>For a complete list of commands, say "Help" or type "?".</p>
 </div>
 
 <script src="/js/modernizr.js"></script>
