sorting out years

--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@
 </div>
 <div id="travel" name="travel" class="section bg-travel ha match-parent vertical">
     <div id="map-canvas" class="match-parent vertical"></div>
-    <div id="map-year" class="toast"><span class="content">1978</span></div>
-    <ul id="map-years" class="list-unstyled list-inline"></ul>
+    <div id="map-years">
+        <span class="ha underline"></span>
+    </div>
 </div>
 <div id="code" name="code" class="section resume match-parent vertical clearfix">
     <div id="projects" class="col-lg-6 col-lg-push-6">
