updating email subject

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <li><a title="GitHub" data-placement="bottom" target="_blank" class="github" href="http://github.com/jimmybyrum"><i class="fa fa-github-square"></i></a></li>
         <li><a title="Flickr" data-placement="bottom" target="_blank" class="flickr" href="http://www.flickr.com/photos/jimmybyrum/"><i class="fa fa-flickr"></i></a></li>
         <li><a title="Strava" data-placement="bottom" target="_blank" class="strava" href="http://www.strava.com/athletes/424412"><i class="fa fa-strava-square"></i></a></li>
-        <li><a title="me@jimmybyrum.com" data-placement="bottom" target="_blank" class="email" href="mailto:me@jimmybyrum.com?subject=Wow%21%20That%27s%20an%20awesome%20website%21"><i class="fa fa-pencil-square"></i></a></li>
+        <li><a title="me@jimmybyrum.com" data-placement="bottom" target="_blank" class="email" href="mailto:me@jimmybyrum.com?subject=Wow%2C%20what%20an%20amazing%20website%21"><i class="fa fa-pencil-square"></i></a></li>
     </ul>
 </footer>
 <div id="help" class="dialog ha container-fluid"><i class="glyphicon glyphicon-remove-sign"></i>
