--- a/index.html
+++ b/index.html
@@ -261,33 +261,47 @@
     </ul>
 </footer>
 <div id="help" class="dialog ha container-fluid"><i class="glyphicon glyphicon-remove-sign"></i>
-    <h3 class="col-sm-12">Voice and Keyboard commands</h3>
-    <div class="col-sm-6">
-        <p class="lead">Page navigation</p>
-        <ul class="list-unstyled">
-            <li>"Top" or "Home" or "Photos"</li>
-            <li>"Travel"</li>
-            <li>"Code"</li>
-            <li><span class="label label-default">k</span> for previous section</li>
-            <li><span class="label label-default">j</span> for next section</li>
-        </ul>
+    <div class="row">
+        <h3 class="col-sm-12">Voice and Keyboard commands</h3>
     </div>
-    <div class="col-sm-6">
-        <p class="lead">Photo navigation</p>
-        <ul class="list-unstyled">
-            <li><span class="label label-default">l</span> or <span class="label label-default"><i class="fa fa-caret-right"></i></span> or "Next"</li>
-            <li><span class="label label-default">h</span> or <span class="label label-default"><i class="fa fa-caret-left"></i></span> or "Previous"</li>
-            <li><span class="label label-default">o</span> or "Open"</li>
-        </ul>
+    <div class="row">
+        <div class="col-sm-6">
+            <p class="lead">Page navigation</p>
+            <ul class="list-unstyled">
+                <li>"Top" or "Home" or "Photos"</li>
+                <li>"Travel"</li>
+                <li>"Code"</li>
+                <li><span class="label label-default">k</span> for previous section</li>
+                <li><span class="label label-default">j</span> for next section</li>
+            </ul>
+        </div>
+        <div class="col-sm-6">
+            <p class="lead">Photo navigation</p>
+            <ul class="list-unstyled">
+                <li><span class="label label-default">l</span> or <span class="label label-default"><i class="fa fa-caret-right"></i></span> or "Next"</li>
+                <li><span class="label label-default">h</span> or <span class="label label-default"><i class="fa fa-caret-left"></i></span> or "Previous"</li>
+                <li><span class="label label-default">o</span> or "Open"</li>
+            </ul>
+        </div>
     </div>
-    <div class="col-sm-12" style="margin-top: 10px;">
-        <p class="lead">Dialogs</p>
-        <ul class="list-unstyled">
-            <li><span class="label label-default">?</span> or "Help"</li>
-            <li><span class="label label-default">esc</span> or "Close"</li>
-            <li>"Show voice commands"</li>
-            <li>"Voice off" to turn off voice commands.</li>
-        </ul>
+    <div class="row">
+        <div class="col-sm-6" style="margin-top: 10px;">
+            <p class="lead">Dialogs</p>
+            <ul class="list-unstyled">
+                <li><span class="label label-default">?</span> or "Help"</li>
+                <li><span class="label label-default">esc</span> or "Close"</li>
+                <li>"Show voice commands"</li>
+                <li>"Voice off" to turn off voice commands.</li>
+            </ul>
+        </div>
+        <div class="col-sm-6" style="margin-top: 10px;">
+            <p class="lead">Year Navigation</p>
+            <ul class="list-unstyled">
+                <li><span class="label label-default">l</span> or <span class="label label-default"><i class="fa fa-caret-right"></i></span></li>
+                <li><span class="label label-default">h</span> or <span class="label label-default"><i class="fa fa-caret-left"></i></span></li>
+                <li>Combine with <span class="label label-default">shift</span> to select multiple years.</li>
+            </ul>
+        </div>
     </div>
 </div>
 <div id="voice-intro" class="ha dialog"><i class="glyphicon glyphicon-remove-sign"></i>
