--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 };</div>
     </div>
 </div>
-<footer class="footer text-center">
+<footer id="footer" name="footer" class="footer text-center">
     <ul class="social list-unstyled list-inline row wrap-content">
         <li><a title="Twitter" data-placement="bottom" target="_blank" class="twitter" href="http://twitter.com/jimmybyrum"><i class="fa fa-twitter-square"></i></a></li>
         <li><a title="Facebook" data-placement="bottom" target="_blank" class="facebook" href="http://facebook.com/jimmybyrum78"><i class="fa fa-facebook-square"></i></a></li>
