updating resume and bug fix

--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
             <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a> on GitHub</li>
         </ul>
 
+        <h2><a target="_blank" href="https://docs.google.com/a/jimmybyrum.com/document/d/17UCmeKenZhOTrxTuvhv6TN_egX9dQDeNRul_mgYSs-M/edit">Resume</a> on Google Docs</h2>
+
     </div>
     <div class="col-lg-6 col-lg-pull-6 editor-cx">
         <div id="editor">var resume = {
@@ -205,11 +207,33 @@
             url:        "http://webmocha.com",
             location:   "San Francisco, CA",
             start_date: "2009-10-01",
-            end_date:   "2010-11-15",
+            end_date:   "2010-12-15",
             job_title:  "Lead Web Developer",
             summary:    "As a WebMocha consultant, I worked with many\
-                        companies including Yahoo, ZENxd,\
+                        companies including Yahoo, Starbucks, ZENxd,\
                         and Jump Associates"
+        },
+        {
+            job_title:  "Traveler",
+            locations:  ["Antarctica", "Andes Mountains",
+                         "Atacama Desert", "Perú"],
+            start_date: "2008-12-12",
+            end_date:   "2009-09-30",
+            summary:    "Nine months of traveling, hiking, cycling,\
+                        running, mountaineering, skiing,\
+                        photography and learning about the world."
+        },
+        {
+            organization:"Ministerio de Educación de Chile",
+            location:   "Porvenir, Chile",
+            start_date: "2008-07-01",
+            end_date:   "2008-12-10",
+            job_title:  "English Teacher",
+            summary:    "Through the English Opens Doors program, I\
+                        worked as a full-time teacher in a high school\
+                        with 301 students. Aside from the normal\
+                        English classes, I also managed the English\
+                        Debate Team, and did after school tutoring."
         },
         {
             company:    "Yahoo!",
