--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             job_title:  "Lead Web Developer",
             summary:    "As a WebMocha consultant, I worked with many\
                         companies including Yahoo, Starbucks, ZENxd,\
-                        and Jump Associates"
+                        and Jump Associates."
         },
         {
             job_title:  "Traveler",
